Fix overflow and padding on render div

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -50,7 +50,8 @@ a {
 
 #render {
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 30px;
+    overflow: auto;
 }
 
 li.active {
